FIX: Connections is functional with only minor bugs. Refactor code structure for improved readability and maintainability

--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ button:disabled {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    pointer-events: none;
 }
 
 .tape-canvas.front {
